# venho-ai-studio

./: .env.example  .gitignore  M10_OPERATING_CENTER_DESIGN_v1.0.md  M10_OPERATING_CENTER_DESIGN_v2.0_final.md  README.md  Run M10 Operating Center UI.command  Run VENHO AI Studio.command  VENHO_AI_STUDIO_Module_02_Prompt_Studio_Plan_v1.1.md  VENHO_AI_STUDIO_Module_03_Validator_Studio_Plan_v1_1.md  VENHO_AI_STUDIO_Module_04_Automation_Studio_Plan_v1_1.md  VENHO_AI_STUDIO_Module_05_Content_Studio_Plan_v1_1.md  VENHO_AI_STUDIO_Module_07_Publishing_Gateway_Development_Plan_v1_2_QC.md  VENHO_AI_STUDIO_Module_08_Analytics_Feedback_Development_Plan_v1_2_QC.md  VENHO_AI_STUDIO_Module_09_Agent_Studio_Development_Plan_v2_2_QC.md  VENHO_AI_STUDIO_Module_10_Dashboard_Plan_v1_2.md  pyproject.toml  setup.sh  task_memory.md  task_status.md  venho-auto.yaml
agent_studio/: __init__.py  agent_router.py  automation_bridge.py  cli.py  context_loader.py  exceptions.py  execution_log.py  missing_knowledge.py  module_request_builder.py  persona_resolver.py  request_validator.py  result_aggregator.py  risk_classifier.py  task_planner.py  utils.py
analytics_feedback/: README.md  __init__.py  alert_generator.py  baseline_calculator.py  cli.py  collection_scheduler.py  exceptions.py  feedback_advisory_generator.py  ingestion_router.py  metrics_standardizer.py  performance_scorer.py  report_generator.py  sentiment_scorer.py
app/: cli.py  main.py
automation_studio/: README.md  __init__.py  action_registry.py  ai_studio_port.py  cli.py  errors.py  job_contract.py  living_lab.py  paths.py  report_builder.py  run_lock.py  run_state.py  scheduler.py  step_executor.py  types.py  workflow_loader.py  workflow_runner.py
config/: settings.json  settings.yaml  settings_prompt.yaml  universal_schema.yaml  validation.yaml
content_studio/: README.md  __init__.py  campaign_generator.py  cli.py  content_calendar.py  content_context.py  content_engine.py  content_manifest.py  content_request.py  content_validator_bridge.py  prompt_bridge.py
core/: batch_manager.py  dna_extractor.py  knowledge_merger.py  logger.py  (+2 more)
(+395 files in other folders)
