[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venho-ai-studio"
version = "0.1.0"
description = "VENHO AI Studio — Knowledge-first AI production system for The West Lake Living"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]

[project.scripts]
venho = "knowledge_studio.vision.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "automation_studio*", "core*", "knowledge_studio*", "prompt_studio*", "providers*", "shared*", "validator_studio*"]

[tool.setuptools.package-data]
"knowledge_studio.vision.prompts" = ["*.md"]
"validator_studio.prompts" = ["*.md"]
