[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venho-ai-studio"
version = "0.1.0"
description = "VENHO AI Studio — Knowledge-first AI production system for The West Lake Living"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]

[project.scripts]
venho = "knowledge_studio.vision.cli:app"
venho-video = "video_studio.cli:app"
venho-publish = "publishing_gateway.cli:app"
venho-analytics = "analytics_feedback.cli:app"
venho-agent = "agent_studio.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_studio*", "analytics_feedback*", "app*", "automation_studio*", "content_studio*", "core*", "dashboard*", "knowledge_studio*", "prompt_studio*", "providers*", "publishing_gateway*", "shared*", "validator_studio*", "video_studio*"]

[tool.setuptools.package-data]
"knowledge_studio.vision.prompts" = ["*.md"]
"validator_studio.prompts" = ["*.md"]
